Commit al master del blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,11 @@
     <title>El titulo del post</title>
 </head>
 <body>
-    <h1>Hola este es un titulo del blog</h1>
-
-    <p>Hola este es el parrago del blog</p>
-
+    <div class="container">
+        <div>
+            <h1>Hola este es un titulo del blog, vamos a intentar hacer un vambio</h1>
+            <p>Hola este es el parrago del blog, vamos a intentar hacer un vambio</p>
+        </div>
+    </div>
 </body>
 </html>
