Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div class="container">
+        <div class="cabecera">
+            Cabecera
+        </div>
         <div>
             <h1>Hola este es un titulo del blog, vamos a intentar hacer un vambio</h1>
             <p>Hola este es el parrago del blog, vamos a intentar hacer un vambio</p>
         </div>
     </div>
 </body>
-</html>
+</html> 
