--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="cabecera">
-            Cabecera
+            Cabecera del Blogpost <span class="tagline">Tu blog de confianza</span>
         </div>
         <div>
             <h1>Hola este es un titulo del blog, vamos a intentar hacer un vambio</h1>
