Nuevos cambios al contenido

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <div>
             <h1>Hola este es un titulo del blog, vamos a intentar hacer un vambio</h1>
             <p>Hola este es el parrago del blog, vamos a intentar hacer un vambio</p>
+            <p>Los blog son la mejor forma de compartir</p>
         </div>
     </div>
 </body>
